src/deployer/manifests/vnext/reporting/quotes-reporting-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: quotes-reporting-svc
    mojaloop.layer: reporting
  name: quotes-reporting-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: quotes-reporting-svc
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        mojaloop.service: quotes-reporting-svc
        mojaloop.layer: reporting
    spec:
      containers:
      - env:
        - name: AUTH_N_SVC_BASEURL
          value: http://authentication-svc:3201
        - name: KAFKA_LOGS_TOPIC
          value: logs
        - name: KAFKA_URL
          value: kafka.infra.svc.cluster.local:9092
        - name: MONGO_URL
          value: mongodb://root:mongoDbPas42@mongodb.infra.svc.cluster.local:27017/
        - name: PARTICIPANTS_SVC_URL
          value: http://participants-svc:3010
        image: mojaloop/reporting-bc-quotes-reporting-svc:0.3.6
        livenessProbe:
          tcpSocket:
            port: 5003
          failureThreshold: 10
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 10
        name: quotes-reporting-svc
        ports:
          - containerPort: 5003
        resources: {}
      restartPolicy: Always
status: {}
