src/deployer/manifests/vnext/reporting/transfers-reporting-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: transfers-reporting-svc
    mojaloop.layer: reporting 
  name: transfers-reporting-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      mojaloop.service: transfers-reporting-svc
  strategy: 
    type: Recreate
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        mojaloop.service: transfers-reporting-svc
        mojaloop.layer: reporting 
    spec:
      containers:
        - env:
          - name: AUTH_N_SVC_BASEURL
            value: http://authentication-svc:3201
          - name: KAFKA_LOGS_TOPIC
            value: logs
          - name: KAFKA_URL
            value: kafka.infra.svc.cluster.local:9092
          - name: MONGO_URL
            value: mongodb://root:mongoDbPas42@mongodb.infra.svc.cluster.local:27017/
          image: mojaloop/reporting-bc-transfers-reporting-svc:0.3.4
          livenessProbe:
            tcpSocket:
              port: 5001
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          name: transfers-reporting-svc
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
