src/deployer/manifests/vnext/reporting/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: admin-ui
    mojaloop.layer: apps
  name: admin-ui
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    mojaloop.service: admin-ui
status:
  loadBalancer: {}
