src/deployer/manifests/vnext/reporting/quotes-reporting-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: quotes-reporting-svc
    mojaloop.layer: reporting 
  name: quotes-reporting-svc
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
  selector:
    mojaloop.service: quotes-reporting-svc
    mojaloop.layer: reporting 
status:
  loadBalancer: {}
