src/deployer/manifests/vnext/reporting/reporting-api-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: reporting-api-svc
    mojaloop.layer: reporting 
  name: reporting-api-svc
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    mojaloop.service: reporting-api-svc
    mojaloop.layer: reporting 
status:
  loadBalancer: {}
