src/deployer/manifests/vnext/reporting/settlements-reporting-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: settlements-reporting-svc
    mojaloop.layer: reporting 
  name: settlements-reporting-svc
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    mojaloop.service: settlements-reporting-svc
    mojaloop.layer: reporting 
status:
  loadBalancer: {}
