src/deployer/manifests/vnext/reporting/transfers-reporting-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    mojaloop.service: transfers-reporting-svc
    mojaloop.layer: reporting 
  name: transfers-reporting-svc
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    mojaloop.service: transfers-reporting-svc
    mojaloop.layer: reporting 
status:
  loadBalancer: {}
